Set up "human" flow

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <script type="text/javascript">
-    localStorage.clear()
+    localStorage.clear();
     window.orbConfig = {
         connectionOptions: {
             gridUrl: "https://grid.meya.ai",
