New phone and points flows

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,8 @@
     localStorage.clear();
     window.orbConfig = {
         connectionOptions: {
-            //gridUrl: "https://grid.meya.ai",
-            //appId: "app-835c5d6355204c0ca732f683ab999198",
-            gridUrl: "https://grid-dc-dev.meya.ai",
-            appId: "app-2e1c632a8a0c4ba380a40bdbff151a4e",
+            gridUrl: "https://grid.meya.ai",
+            appId: "app-835c5d6355204c0ca732f683ab999198",
             integrationId: "integration.orb",
             userId: "u-0",
             onFirstConnect: function (connectionData, next) {
