--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>Meya Front demo</title>
+    <title>Meya Pages demo</title>
     <meta charset="utf-8"/>
 </head>
 <body>
